@startuml
title Combat

class Entite {
  -x: int
  -y: int
  -hp: double
  -maxHp: double
  -degat: double
  -enVie: boolean
  +mettreDegat(cible: Entite)
  +prendreDegat(d: double)
  +aCote(e: Entite): boolean
  +getHp(): double
  +estMort(): boolean
}

class Player {
  -inventory: ArrayList<Item>
  +mettreDegat(cible: Entite)
  +setSpriteJoueur(i: int)
}

class Monstre {
  -deplacementStrategie: DeplacementStrategie
  +deplacer(laby: Labyrinthe)
}

class Labyrinthe {
  -joueur: Player
  -monstres: ArrayList<Monstre>
  +attaqueJoueur()
  +monstreSurCase(y: int, x: int): boolean
  +canEntityMoveTo(i: int, j: int): boolean
}

enum EtatVisuelle {
  NORMAL
  ATTAQUE_JOUEUR
  ATTAQUE_MONSTRE
  MORT
}

Entite <|-- Player
Entite <|-- Monstre
Entite --> EtatVisuelle
Labyrinthe --> "1" Player
Labyrinthe --> "*" Monstre

@enduml